--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -6,6 +6,9 @@ ifndef NLFILES
 $(error Please set variable NLFILES listing json files to generate pml)
 endif
 
+export  PYTHONPATH	:=	$(NL2PMLDIR):$(PYTHONPATH)
+
+
 NL2PML	=	$(NL2PMLDIR)/nl2pml.pmlt
 MODELS	=	$(NLFILES:.json=)
 PMLFILES=	$(foreach m,$(MODELS),$(m)/$(m).pml)
