--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -9,17 +9,29 @@ endif
 export  PYTHONPATH	:=	$(NL2PMLDIR):$(PYTHONPATH)
 
 
-NL2PML	=	$(NL2PMLDIR)/nl2pml.pmlt
-MODELS	=	$(NLFILES:.json=)
-PMLFILES=	$(foreach m,$(MODELS),$(m)/$(m).pml)
+NL2PML		=	$(NL2PMLDIR)/nl2pml.pmlt
+MODELS		=	$(NLFILES:.json=)
+PMLFILES	=	$(foreach m,$(MODELS),$(m)/$(m).pml)
+CFILES		=	$(foreach m,$(MODELS),$(m)/pan.c)
+EXEFILES	=	$(foreach m,$(MODELS),$(m)/$(m).pan.out)
+REPORTFILES	=	$(foreach m,$(MODELS),$(m)/$(m).report)
 
 define pmlrule
 $1/$1.pml:	$1.json
 	mkdir -p $1
 	expander.py --eval="modelfile='"$1.json"'" --eval="opfile='"$1/$1.pml"'" $(NL2PML)
 
+$1/pan.c:	$1/$1.pml
+	cd $1 && spin -a $1.pml
+
+$1/$1.pan.out:	$1/pan.c
+	cc -o $1/$1.pan.out $1/pan.c
+
+$1/$1.report:	$1/$1.pan.out
+	$1/$1.pan.out > $1/$1.report
+
 endef
 
-all:	$(PMLFILES)
+all:	$(REPORTFILES)
 
 $(foreach m,$(MODELS),$(eval $(call pmlrule,$m)))
