--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -17,7 +17,7 @@ CFILES		=	$(foreach m,$(MODELS),$(m)/pan.c)
 EXEFILES	=	$(foreach m,$(MODELS),$(m)/$(m).pan.out)
 REPORTFILES	=	$(foreach m,$(MODELS),$(m)/$(m).report)
 
-CFLAGS	= -O3 -DVECTORSZ=8192
+CFLAGS	= -O3 -DVECTORSZ=8192 -DPRINTF
 
 define pmlrule
 $1/$1.pml:	$1.json
