--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -17,8 +17,11 @@ CFILES		=	$(foreach m,$(MODELS),$(m)/pan.c)
 EXEFILES	=	$(foreach m,$(MODELS),$(m)/$(m).pan.out)
 REPORTFILES	=	$(foreach m,$(MODELS),$(m)/$(m).report)
 
-MAXDEPTH=	20000
-CFLAGS	= -O3 -DVECTORSZ=8192 -DPRINTF
+# Note: Settign NCORE>1 leads to "shmget shared queues: Cannot allocate memory" on NetBSD
+NCORE	=	1 #$(shell /usr/bin/nproc 2>/dev/null || /sbin/sysctl -n hw.ncpu || echo 1)
+MAXDEPTH=	15000
+VECTORSZ=	5000
+CFLAGS	= -O3 -DVECTORSZ=$(VECTORSZ) -DPRINTF -DNCORE=$(NCORE)
 
 define pmlrule
 $1/$1.pml:	$1.json $1.pml
