--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -35,8 +35,7 @@ $1/$1.pan.out:	$1/pan.c
 	cc $(CFLAGS) -o $1/$1.pan.out $1/pan.c
 
 $1/$1.report:	$1/$1.pan.out
-	$1/$1.pan.out -m$(MAXDEPTH) -a | tee $1/$1.report
-	mv -f $1.pml.trail $1
+	cd $1 && ./$1.pan.out -m$(MAXDEPTH) -av | tee $1.report
 
 endef
 
