--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -35,7 +35,7 @@ $1/$1.pan.out:	$1/pan.c
 
 $1/$1.report:	$1/$1.pan.out
 	cd $1 && ./$1.pan.out -m$(MAXDEPTH) -av | tee $1.report
-	echo $1.pan.out -r for detailed trace
+	@echo $1.pan.out -r for detailed trace
 
 endef
 
