--- a/Makefile.nl2pml
+++ b/Makefile.nl2pml
@@ -35,9 +35,10 @@ $1/$1.pan.out:	$1/pan.c
 
 $1/$1.report:	$1/$1.pan.out
 	cd $1 && ./$1.pan.out -m$(MAXDEPTH) -av | tee $1.report
-	@echo $1.pan.out -r for detailed trace
-	@echo spin -t $1.pml to analyze trace
-	@echo Use lbltrace.sh to lable states in a trace file
+	@echo NOTE Use $1.pan.out -r for detailed trace
+	@echo NOTE Use spin -t $1.pml to analyze trace
+	@echo NOTE Use lbltrace.sh to label states in a trace file
+	@echo NOTE Do check forks listeed at the bottom of $1.pml for need of constraints
 
 endef
 
